src/test/deca/context/valid/sansObjet/mod_zero.deca
// Description :
//    Modulo zero
//
// Resultats :
//    Ok

{
    int a = 10;
    int b = 0;
    print(a % b);
}