src/test/deca/context/invalid/sansObjet/cast_bool_1.deca
// Description :
//    Conversion invalide
//    Voir SYNTAXE paragraphe 9
//
// Resultats :
//    Erreur contextuelle

{
    boolean b;
    b = (boolean)(1 > 0);
}
